<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidPassReminder</string>
    <string name="error_no_data">No data</string>
    <string name="retry">Retry</string>
    <string name="reminderHint">Data to remember…</string>
    <string name="btnRememberText">Salva</string>
    <string name="btnInfoText">Info</string>
    <string name="radioFined">Multato</string>
    <string name="radioNoValidate">Non obliterato</string>
    <string name="radioMissingOption">Opzione mancante</string>
    <string name="radioDoubleCheckIn">Sospetto doppio check-in</string>
    <string name="numero_tessera">Numero</string>
    <string name="nome">Nome</string>
    <string name="expiration">Scadenza</string>
    <string name="contractType">Tipo carta</string>
    <string name="status">Stato</string>
    <string name="balance">Saldo</string>
    <string name="km">Km</string>
    <string name="fareLevel">Fascia</string>
    <string name="spinningMsg">Please Wait!</string>
    <string name="cardid">Card ID</string>
    <string name="ctype">Card Type</string>
</resources>
